# directed-cubical

./: .gitignore  Cubical.hs  DirCubeSet.hs  LICENSE  PTrace.hs  README  Tests.hs  changelog  directed-cubical.cabal
Examples/: bigCube.hs  genusTwo3d.hs  oneTorus3d.hs  smallCube.hs  smallcube.hs  sqPairBack.hs  sqPairFwd.hs  swissflag.hs  test.html  torus3d.hs  twoTorus3d.hs
Examples/Animations/genusTwo3d/: genusTwo1.vtk  genusTwo10.vtk  genusTwo11.vtk  genusTwo12.vtk  genusTwo13.vtk  genusTwo14.vtk  genusTwo15.vtk  genusTwo16.vtk  genusTwo17.vtk  genusTwo18.vtk  genusTwo19.vtk  genusTwo2.vtk  genusTwo20.vtk  genusTwo21.vtk  genusTwo22.vtk  genusTwo23.vtk  genusTwo24.vtk  genusTwo25.vtk  genusTwo26.vtk  genusTwo27.vtk  genusTwo28.vtk  genusTwo29.vtk  genusTwo3.vtk  genusTwo4.vtk  genusTwo5.vtk  genusTwo6.vtk  genusTwo7.vtk  genusTwo8.vtk  genusTwo9.vtk
Examples/Animations/random1/: random1.vtk  random10.vtk  random11.vtk  random12.vtk  random13.vtk  random14.vtk  random15.vtk  random16.vtk  random17.vtk  random18.vtk  random19.vtk  random2.vtk  random20.vtk  random21.vtk  random22.vtk  random23.vtk  random24.vtk  random25.vtk  random26.vtk  random27.vtk  random28.vtk  random29.vtk  random3.vtk  random30.vtk  random31.vtk  random32.vtk  random33.vtk  random34.vtk  random35.vtk  random36.vtk  random37.vtk  random38.vtk  random39.vtk  random4.vtk  random40.vtk  random41.vtk  random42.vtk  random43.vtk  random44.vtk  random45.vtk  (+16 more)
Examples/Animations/sqPairBack/: sqPairBack1.vtk  sqPairBack2.vtk  sqPairBack3.vtk  (+6 more)
Topology/DirCubeCmplx/: CornerReduce.hs  DirCubeCmplx.hs
(+51 files in other folders)
