name:                directed-cubical
version:             0.1.0.0
synopsis:            Finite Directed Cubical Complexes and associated algorithms
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Michael Misamore
maintainer:          m.misamore@gmail.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.8
stability:           experimental

library
  exposed-modules:     Math.Topology.CubeCmplx.CornerReduce, 
                       Math.Topology.CubeCmplx.DirCubeCmplx
  -- other-modules:       
  build-depends:       base ==4.6.*, 
                       vector ==0.10.*, 
                       unordered-containers ==0.2.*, 
                       parallel ==3.2.*, 
                       hashable ==1.2.*, 
                       deepseq ==1.3.*, 
                       QuickCheck ==2.6.*, 
                       containers ==0.5.*

